// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The background color should change in proportion to how "correct" the answer is should set the colors to green if all three answers are correct 1`] = `
<div
  class="Toggles"
>
  <div
    class="Toggles-container"
    data-testid="toggles-container"
    style="box-shadow: 0 0 10px #76E0C2;"
  >
    <div
      class="Toggles-title"
    >
      Really easy question:
    </div>
    <div
      class="Toggles-answers"
    >
      <div
        class="Toggle locked"
        style="border-color: #fbfbfb;"
      >
        <div
          class="Toggle-slider"
          data-testid="slider"
          style="left: 0%; width: 50%; background-color: rgb(165, 231, 226); border-color: #a5e7e2;"
        />
        <div
          class="Toggle-answer selected"
          style="width: 50%;"
        >
          <input
            checked=""
            disabled=""
            id="t1-q1-a1"
            name="t1-q1"
            type="radio"
            value="a1"
          />
          <label
            for="t1-q1-a1"
            style="color: rgb(76, 173, 148);"
            tabindex="-1"
          >
            Valid answer 1
          </label>
        </div>
        <div
          class="Toggle-answer"
          style="width: 50%;"
        >
          <input
            disabled=""
            id="t1-q1-a2"
            name="t1-q1"
            type="radio"
            value="a2"
          />
          <label
            for="t1-q1-a2"
            style="color: rgb(255, 255, 255);"
            tabindex="-1"
          >
            Invalid answer 1
          </label>
        </div>
      </div>
      <div
        class="Toggle locked"
        style="border-color: #fbfbfb;"
      >
        <div
          class="Toggle-slider"
          data-testid="slider"
          style="left: 0%; width: 50%; background-color: rgb(165, 231, 226); border-color: #a5e7e2;"
        />
        <div
          class="Toggle-answer selected"
          style="width: 50%;"
        >
          <input
            checked=""
            disabled=""
            id="t1-q2-a1"
            name="t1-q2"
            type="radio"
            value="a1"
          />
          <label
            for="t1-q2-a1"
            style="color: rgb(76, 173, 148);"
            tabindex="-1"
          >
            Valid answer 2
          </label>
        </div>
        <div
          class="Toggle-answer"
          style="width: 50%;"
        >
          <input
            disabled=""
            id="t1-q2-a2"
            name="t1-q2"
            type="radio"
            value="a2"
          />
          <label
            for="t1-q2-a2"
            style="color: rgb(255, 255, 255);"
            tabindex="-1"
          >
            Invalid answer 2
          </label>
        </div>
      </div>
      <div
        class="Toggle locked"
        style="border-color: #fbfbfb;"
      >
        <div
          class="Toggle-slider"
          data-testid="slider"
          style="left: 0%; width: 50%; background-color: rgb(165, 231, 226); border-color: #a5e7e2;"
        />
        <div
          class="Toggle-answer selected"
          style="width: 50%;"
        >
          <input
            checked=""
            disabled=""
            id="t1-q3-a1"
            name="t1-q3"
            type="radio"
            value="a1"
          />
          <label
            for="t1-q3-a1"
            style="color: rgb(76, 173, 148);"
            tabindex="-1"
          >
            Valid answer 3
          </label>
        </div>
        <div
          class="Toggle-answer"
          style="width: 50%;"
        >
          <input
            disabled=""
            id="t1-q3-a2"
            name="t1-q3"
            type="radio"
            value="a2"
          />
          <label
            for="t1-q3-a2"
            style="color: rgb(255, 255, 255);"
            tabindex="-1"
          >
            Invalid answer 3
          </label>
        </div>
      </div>
    </div>
    <div
      class="Toggles-result"
    >
      The answer is correct!
    </div>
  </div>
</div>
`;

exports[`The background color should change in proportion to how "correct" the answer is should set the colors to orange if two of the answers in incorrect 1`] = `
<div
  class="Toggles"
>
  <div
    class="Toggles-container"
    data-testid="toggles-container"
    style="box-shadow: 0 0 10px #F6B868;"
  >
    <div
      class="Toggles-title"
    >
      Really easy question:
    </div>
    <div
      class="Toggles-answers"
    >
      <div
        class="Toggle"
        style="border-color: #f9d29f;"
      >
        <div
          class="Toggle-slider"
          data-testid="slider"
          style="left: 0%; width: 50%; background-color: rgb(248, 202, 163); border-color: #f8caa3;"
        />
        <div
          class="Toggle-answer selected"
          style="width: 50%;"
        >
          <input
            checked=""
            id="t1-q1-a1"
            name="t1-q1"
            type="radio"
            value="a1"
          />
          <label
            for="t1-q1-a1"
            style="color: rgb(159, 147, 139);"
            tabindex="-1"
          >
            Valid answer 1
          </label>
        </div>
        <div
          class="Toggle-answer"
          style="width: 50%;"
        >
          <input
            id="t1-q1-a2"
            name="t1-q1"
            type="radio"
            value="a2"
          />
          <label
            for="t1-q1-a2"
            style="color: rgb(255, 255, 255);"
            tabindex="-1"
          >
            Invalid answer 1
          </label>
        </div>
      </div>
      <div
        class="Toggle"
        style="border-color: #f9d29f;"
      >
        <div
          class="Toggle-slider"
          data-testid="slider"
          style="left: 0%; width: 50%; background-color: rgb(248, 202, 163); border-color: #f8caa3;"
        />
        <div
          class="Toggle-answer selected"
          style="width: 50%;"
        >
          <input
            checked=""
            id="t1-q2-a1"
            name="t1-q2"
            type="radio"
            value="a1"
          />
          <label
            for="t1-q2-a1"
            style="color: rgb(159, 147, 139);"
            tabindex="-1"
          >
            Valid answer 2
          </label>
        </div>
        <div
          class="Toggle-answer"
          style="width: 50%;"
        >
          <input
            id="t1-q2-a2"
            name="t1-q2"
            type="radio"
            value="a2"
          />
          <label
            for="t1-q2-a2"
            style="color: rgb(255, 255, 255);"
            tabindex="-1"
          >
            Invalid answer 2
          </label>
        </div>
      </div>
      <div
        class="Toggle"
        style="border-color: #f9d29f;"
      >
        <div
          class="Toggle-slider"
          data-testid="slider"
          style="left: 0%; width: 50%; background-color: rgb(248, 202, 163); border-color: #f8caa3;"
        />
        <div
          class="Toggle-answer selected"
          style="width: 50%;"
        >
          <input
            checked=""
            id="t1-q3-a2"
            name="t1-q3"
            type="radio"
            value="a2"
          />
          <label
            for="t1-q3-a2"
            style="color: rgb(159, 147, 139);"
            tabindex="-1"
          >
            Invalid answer 3
          </label>
        </div>
        <div
          class="Toggle-answer"
          style="width: 50%;"
        >
          <input
            id="t1-q3-a1"
            name="t1-q3"
            type="radio"
            value="a1"
          />
          <label
            for="t1-q3-a1"
            style="color: rgb(255, 255, 255);"
            tabindex="-1"
          >
            Valid answer 3
          </label>
        </div>
      </div>
    </div>
    <div
      class="Toggles-result"
    >
      The answer is incorrect
    </div>
  </div>
</div>
`;

exports[`The background color should change in proportion to how "correct" the answer is should set the colors to red if all three answers are incorrect 1`] = `
<div
  class="Toggles"
>
  <div
    class="Toggles-container"
    data-testid="toggles-container"
    style="box-shadow: 0 0 10px #F1B496;"
  >
    <div
      class="Toggles-title"
    >
      Really easy question:
    </div>
    <div
      class="Toggles-answers"
    >
      <div
        class="Toggle"
        style="border-color: #fbfbfb;"
      >
        <div
          class="Toggle-slider"
          data-testid="slider"
          style="left: 0%; width: 50%; background-color: rgb(242, 203, 189); border-color: #f2cbbd;"
        />
        <div
          class="Toggle-answer selected"
          style="width: 50%;"
        >
          <input
            checked=""
            id="t1-q1-a2"
            name="t1-q1"
            type="radio"
            value="a2"
          />
          <label
            for="t1-q1-a2"
            style="color: rgb(228, 121, 88);"
            tabindex="-1"
          >
            Invalid answer 1
          </label>
        </div>
        <div
          class="Toggle-answer"
          style="width: 50%;"
        >
          <input
            id="t1-q1-a1"
            name="t1-q1"
            type="radio"
            value="a1"
          />
          <label
            for="t1-q1-a1"
            style="color: rgb(255, 255, 255);"
            tabindex="-1"
          >
            Valid answer 1
          </label>
        </div>
      </div>
      <div
        class="Toggle"
        style="border-color: #fbfbfb;"
      >
        <div
          class="Toggle-slider"
          data-testid="slider"
          style="left: 0%; width: 50%; background-color: rgb(242, 203, 189); border-color: #f2cbbd;"
        />
        <div
          class="Toggle-answer selected"
          style="width: 50%;"
        >
          <input
            checked=""
            id="t1-q2-a2"
            name="t1-q2"
            type="radio"
            value="a2"
          />
          <label
            for="t1-q2-a2"
            style="color: rgb(228, 121, 88);"
            tabindex="-1"
          >
            Invalid answer 2
          </label>
        </div>
        <div
          class="Toggle-answer"
          style="width: 50%;"
        >
          <input
            id="t1-q2-a1"
            name="t1-q2"
            type="radio"
            value="a1"
          />
          <label
            for="t1-q2-a1"
            style="color: rgb(255, 255, 255);"
            tabindex="-1"
          >
            Valid answer 2
          </label>
        </div>
      </div>
      <div
        class="Toggle"
        style="border-color: #fbfbfb;"
      >
        <div
          class="Toggle-slider"
          data-testid="slider"
          style="left: 0%; width: 50%; background-color: rgb(242, 203, 189); border-color: #f2cbbd;"
        />
        <div
          class="Toggle-answer selected"
          style="width: 50%;"
        >
          <input
            checked=""
            id="t1-q3-a2"
            name="t1-q3"
            type="radio"
            value="a2"
          />
          <label
            for="t1-q3-a2"
            style="color: rgb(228, 121, 88);"
            tabindex="-1"
          >
            Invalid answer 3
          </label>
        </div>
        <div
          class="Toggle-answer"
          style="width: 50%;"
        >
          <input
            id="t1-q3-a1"
            name="t1-q3"
            type="radio"
            value="a1"
          />
          <label
            for="t1-q3-a1"
            style="color: rgb(255, 255, 255);"
            tabindex="-1"
          >
            Valid answer 3
          </label>
        </div>
      </div>
    </div>
    <div
      class="Toggles-result"
    >
      The answer is incorrect
    </div>
  </div>
</div>
`;

exports[`The background color should change in proportion to how "correct" the answer is should set the colors to red if one of the answers in incorrect 1`] = `
<div
  class="Toggles"
>
  <div
    class="Toggles-container"
    data-testid="toggles-container"
    style="box-shadow: 0 0 10px #F1B496;"
  >
    <div
      class="Toggles-title"
    >
      Really easy question:
    </div>
    <div
      class="Toggles-answers"
    >
      <div
        class="Toggle"
        style="border-color: #fbfbfb;"
      >
        <div
          class="Toggle-slider"
          data-testid="slider"
          style="left: 0%; width: 50%; background-color: rgb(242, 203, 189); border-color: #f2cbbd;"
        />
        <div
          class="Toggle-answer selected"
          style="width: 50%;"
        >
          <input
            checked=""
            id="t1-q1-a1"
            name="t1-q1"
            type="radio"
            value="a1"
          />
          <label
            for="t1-q1-a1"
            style="color: rgb(228, 121, 88);"
            tabindex="-1"
          >
            Valid answer 1
          </label>
        </div>
        <div
          class="Toggle-answer"
          style="width: 50%;"
        >
          <input
            id="t1-q1-a2"
            name="t1-q1"
            type="radio"
            value="a2"
          />
          <label
            for="t1-q1-a2"
            style="color: rgb(255, 255, 255);"
            tabindex="-1"
          >
            Invalid answer 1
          </label>
        </div>
      </div>
      <div
        class="Toggle"
        style="border-color: #fbfbfb;"
      >
        <div
          class="Toggle-slider"
          data-testid="slider"
          style="left: 0%; width: 50%; background-color: rgb(242, 203, 189); border-color: #f2cbbd;"
        />
        <div
          class="Toggle-answer selected"
          style="width: 50%;"
        >
          <input
            checked=""
            id="t1-q2-a2"
            name="t1-q2"
            type="radio"
            value="a2"
          />
          <label
            for="t1-q2-a2"
            style="color: rgb(228, 121, 88);"
            tabindex="-1"
          >
            Invalid answer 2
          </label>
        </div>
        <div
          class="Toggle-answer"
          style="width: 50%;"
        >
          <input
            id="t1-q2-a1"
            name="t1-q2"
            type="radio"
            value="a1"
          />
          <label
            for="t1-q2-a1"
            style="color: rgb(255, 255, 255);"
            tabindex="-1"
          >
            Valid answer 2
          </label>
        </div>
      </div>
      <div
        class="Toggle"
        style="border-color: #fbfbfb;"
      >
        <div
          class="Toggle-slider"
          data-testid="slider"
          style="left: 0%; width: 50%; background-color: rgb(242, 203, 189); border-color: #f2cbbd;"
        />
        <div
          class="Toggle-answer selected"
          style="width: 50%;"
        >
          <input
            checked=""
            id="t1-q3-a2"
            name="t1-q3"
            type="radio"
            value="a2"
          />
          <label
            for="t1-q3-a2"
            style="color: rgb(228, 121, 88);"
            tabindex="-1"
          >
            Invalid answer 3
          </label>
        </div>
        <div
          class="Toggle-answer"
          style="width: 50%;"
        >
          <input
            id="t1-q3-a1"
            name="t1-q3"
            type="radio"
            value="a1"
          />
          <label
            for="t1-q3-a1"
            style="color: rgb(255, 255, 255);"
            tabindex="-1"
          >
            Valid answer 3
          </label>
        </div>
      </div>
    </div>
    <div
      class="Toggles-result"
    >
      The answer is incorrect
    </div>
  </div>
</div>
`;
